<resources>
    <string name="app_name">Shopping App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aciklama">Bu tətbiq Azərbaycan ərazisində yerləşən bütün universitetlərin bütün ixtisaslarını əhatə edir</string>
    <string name="telimat">Təlimat</string>
    <string name="haqqinda">Haqqinda</string>
    <string name="cixis">Çıxış</string>
    <string name="cix">Hesabdan çıxın</string>
    <string name="login">Login</string>
    <string name="paylas">Paylaş</string>
    <string name="welcome">Gələcək sənin Seçim sənin...</string>
    <string name="main">Əsas</string>
    <string name="ilk">Məktəbi bitirmək üzrəsən və hələ də kim olacağına qərar verməmisən? Elə isə doğru yerdəsən. Mən sənə düzgün seçim etməkdə kömək edəcəyəm. Gəl birlikdə başlayaq!!!</string>
    <string name="sinif89">VIII  və IX</string>
    <string name="sinif1011">X  və  XI</string>
    <string name="about">Bu tətbiq gələcək ali təhsilini Azərbaycan ərazisində yerləşən universitetlərdə almaq istəyən şagirdlər üçün nəzərdə tutulub. Hazırda oxuduğun sinifi seç, ixtisas və peşələr haqqında məlumat al!
        Əgər abituriyentsənsə qeydiyyatdan keçərək topladığın bala uyğun və seçdiyin ixtisas qrupu üzrə bütün ixtisasları görə bilərsən. Uğurlar</string>
    <string name="sec">Hazırda oxuduğun sinifi seç!</string>
    <string name="email">Email daxil edin:</string>
    <string name="parol">Parol daxil edin:</string>
    <string name="giris">Daxil ol</string>
    <string name="qeydiyyat">Qeydiyyat</string>
    <string name="xos">"Xoş gəldin "</string>
    <string name="notLogin">Hesabınız yoxdursa, qeydiyyatdan keçin</string>
    <string name="qeydiyyatdanKec">Qeydiyyatdan keçin</string>
    <string name="qeydiyyatedin">Qeydiyyatdan keçin</string>
    <string name="addaxiledin">Adınızı daxil edin</string>
    <string name="emaildaxil">Email daxil edin</string>
    <string name="paroldaxil">Parol daxil edin</string>
    <string name="ireli">Növbəti</string>
    <string name="bizeyazin">Bizə yazın</string>
    <string name="hesab">Hesabım</string>
    <string name="option">İxtisas seçin</string>
    <string name="metn1">Meslek seçiminde yapılan hatalar: Meslek seçerken birçok öğrencinin sıkça yaptığı hatalar var. Bu hataları sıralayacak olursak: -Meslek hakkında tam bilgi sahibi olmamak -Ebeveynin istediği mesleği seçmek -Yetenekler ve kişilik özellikleri göz ardı edilip statüsüne bakılarak meslek seçmek. -Alınan puana göre tercih yapmak. -Neresi olursa olsun bir bölüme yerleşeyim düşüncesiyle tercih yapmak -Akran grubunun etkisinde kalmak. -Bölüm değil üniversite adı için tercih yapmak</string>
    <string name="yaz">Təkliflərinizi bizə yazın</string>
    <string name="meslek">Öyrənmək istədiyin ixtisas  və onun gələcək iş imkanları barədə məlumat almaq üçün seçim et</string>
    <string name="group">Seçdiyin istiqamət üzrə aşağıdakılardan birini seç</string>
    <string name="bal">Balını daxil et</string>
</resources>