<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".LoginFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/baseline_person_24"
                app:tint="@color/yellowLight" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/main"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/main"
                app:startIconDrawable="@drawable/baseline_email_24"
                app:startIconTint="@color/main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="19dp"
                    android:fontFamily="casual"
                    android:hint="@string/email"
                    android:textColorHint="@color/main" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/main"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/main"
                app:startIconDrawable="@drawable/baseline_key_24"
                app:startIconTint="@color/main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/parol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="casual"
                    android:hint="@string/parol" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="233dp">

                <Button
                    android:id="@+id/signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/yellowLight"
                    android:elevation="10dp"
                    android:fontFamily="casual"
                    android:gravity="center|center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/giris"
                    android:textAllCaps="false"
                    android:textColor="@color/main"
                    android:textSize="16sp"
                    app:cornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/yellowLight"
                    android:fontFamily="casual"
                    android:text="@string/notLogin"
                    android:textAllCaps="false"
                    android:textColor="@color/main"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/forgetPasswordBtn" />

                <Button
                    android:id="@+id/forgetPasswordBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/yellowLight"
                    android:elevation="10dp"
                    android:fontFamily="casual"
                    android:gravity="center_horizontal"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="Parolu unutdum"
                    android:textAllCaps="false"
                    android:textColor="@color/main"
                    android:textSize="16sp"
                    app:cornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signIn" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>